--- a/bikespace_frontend/src/styles/variables.module.scss
+++ b/bikespace_frontend/src/styles/variables.module.scss
@@ -35,8 +35,8 @@ $wrapper-max-width: 800px;
 /* sync with WRAPPER_FULL_WIDTH in /src/hooks/use-is-mobile.ts */
 $wrapper-full-width: 1024px;
 
-/* Sidebar feed module height on mobile */
-$feed-height: 50vh;
+/* Sidebar feed module height % of screen on mobile */
+$feed-height: 60%;
 
 :export {
   wrapperFullWidth: $wrapper-full-width;
